try to fix dropdown on small screens

--- a/src/components/MenuButton/style.scss
+++ b/src/components/MenuButton/style.scss
@@ -10,6 +10,8 @@
         text-align: left;
         padding-left: 1.5em;
 
+        color: inherit;
+
         &:hover {
             text-decoration: none;
         }
@@ -29,6 +31,14 @@
 .sub-item {
     &> a {
         padding-left: 3em;
+        font-size: small;
+        font-kerning: auto;
+    }
+}
+
+.sub-item-dropdown {
+    &> a {
+        padding-left: 1.5em;
         font-size: small;
         font-kerning: auto;
     }
